examples/errors/error_unreachable_code.cay
// Error测试：不可达代码
public class TestUnreachableCode {
    public static void main() {
        return;
        println("This is unreachable");
    }
}
